--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>My Website</title>
-    <link rel="stylesheet" type="text/css" href="../static/styles.css">
+    <link rel="stylesheet" type="text/css" href="static/styles.css">
 </head>
 <body>
     <div class="tabs">
@@ -36,7 +36,7 @@
         <p>This is the content for Tab 3.</p>
     </div>
 
-    <script src="../static/script.js"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
 
