--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="Tab1" class="tabcontent">
         <h2>Tab 1 Content</h2>
         <p>This is the content for Tab 1.</p>
-        <img src="{{ url_for('static', filename='image.png') }}" alt="Image">
+        <img src="static/image.png" alt="Image">
     </div>
 
     <div id="Tab2" class="tabcontent">
