--- a/index.html
+++ b/index.html
@@ -1,41 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Website</title>
-    <link rel="stylesheet" type="text/css" href="static/styles.css">
+    <title>Login</title>
 </head>
 <body>
-    <div class="tabs">
-        <button class="tablinks" onclick="openTab('Tab1')">Tab 1</button>
-        <button class="tablinks" onclick="openTab('Tab2')">Tab 2</button>
-        <button class="tablinks" onclick="openTab('Tab3')">Tab 3</button>
-    </div>
-
-    <div id="Tab1" class="tabcontent">
-        <h2>Tab 1 Content</h2>
-        <p>This is the content for Tab 1.</p>
-        <img src="static/image.png" alt="Image">
-    </div>
-
-    <div id="Tab2" class="tabcontent">
-        <h2>Tab 2 Content</h2>
-        <p>This is the content for Tab 2.</p>
-        <p>x.</p>
-        <p>x.</p>
-        <p>x.</p>
-        <p>x.</p>
-        <p>x.</p>
-        <p>x.</p>
-        <p>x.</p>
-        <p>x.</p>
-
-    </div>
-
-    <div id="Tab3" class="tabcontent">
-        <h2>Tab 3 Content</h2>
-        <p>This is the content for Tab 3.</p>
-    </div>
-
+    <h1>Login</h1>
+    <form id="login-form">
+        <label for="password">Password:</label>
+        <input type="password" id="password" required>
+        <button type="button" onclick="validatePassword()">Submit</button>
+    </form>
+    <p id="error-message" style="color: red;"></p>
     <script src="static/script.js"></script>
 </body>
 </html>
