fixed line in js

--- a/protected.html
+++ b/protected.html
@@ -37,6 +37,9 @@
     </div>
 
     <script src="static/script.js"></script>
+    <script>
+        document.getElementById('Tab1').classList.add('active');
+    </script>
 </body>
 </html>
 
