--- a/protected.html
+++ b/protected.html
@@ -34,6 +34,17 @@
     <div id="Tab3" class="tabcontent">
         <h2>Tab 3 Content</h2>
         <p>This is the content for Tab 3.</p>
+        <p> Experimenting with paragraph code <br>
+            i just forced a line break. now text will keep going
+            xxxxxxxxxxxxxxxxxxxxxxxx
+            xxxxxxxxxxxxxxxxxxxxxxxx
+            xxxxxxxxxxxxxxxxxxxxxxx
+            xxxxxxxxxxxxxxxxxxxxxxxx
+            xxxxxxxxxxxxxxxxxxxxxx
+            xxxxxxxxxxxxxxxxx
+            until i force another one <br>
+            xxxxxxxxxxxxxxxxxxxxxxxxxx
+        </p>
     </div>
 
     <script src="static/script.js"></script>
